kubernetes-networks/dashboard/dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard 
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
  namespace: kubernetes-dashboard 
spec:
  rules:
  - http:
      paths:
      - path: /dashboard 
        pathType: Prefix
        backend:
          service:
            name: 
              kubernetes-dashboard
            port:
              number: 8443
